<resources>
    <string name="app_name">Shopify Demo Demo</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="network_error">No network connection.</string>
    <string name="errorString">Something went wrong, Please try again.</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="image">image</string>
    <string name="tryagain">Try Again</string>
    <string name="signin_drawer">Sign In</string>
    <string name="drawertext">Save, shop and view orders</string>
    <string name="mid">18</string>
    <string name="shop_in">Shop by categories</string>
    <string name="copy"><![CDATA[CopyRight \u00a9]]></string>
    <string name="apikey">02281a6842403b29b3e45f1d1b8ddb6f</string>
    <string name="shopdomain">random-booksin.myshopify.com</string>
    <string name="currency">Choose Currency</string>
    <string name="noproducts">No More Products Found in Collections!</string>
    <string name="atoz">A To Z</string>
    <string name="ztoa">Z  To A</string>
    <string name="htol">Price : High to Low</string>
    <string name="ltoh">Price : Low To High</string>
    <string name="collection">Collections</string>
    <string name="nocollection">No More Collection Found.</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="pleasecheckyourmail">Please check your mail</string>
    <string name="invalidemail">invalid email</string>
    <string name="empty">Please provide some value first !</string>
    <string name="signupwithustext">Sign up today</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="passwordnotmatch">password not match</string>
    <string name="successfullogin">Successfully login</string>
    <string name="variantheading">Select Variants</string>
    <string name="addtocart">Add to Cart</string>
    <string name="addtowish">Add to Wishlist</string>
    <string name="selectvariant">Select Variant First !</string>
    <string name="successwish">Successfully added into wishlist !</string>
    <string name="alreadyinwish">Already in WishList</string>
    <string name="successcart">Successfully added into cart !</string>
    <string name="cart">Cart</string>
    <string name="myaccount">My Account</string>
    <string name="mywishlist">My Wishlist</string>
    <string name="movetocart">MOVE TO CART</string>
    <string name="errorwish">No Data in WishList</string>
    <string name="mycartlist">View Your Cart</string>
    <string name="yourcart">Your Shopping Cart</string>
    <string name="emptycart">Your Cart Is Empty !</string>
    <string name="remove">Remove</string>
    <string name="movetowish">Move To WishList</string>
    <string name="subtotaltext">Sub Total</string>
    <string name="taxtext">Tax</string>
    <string name="grandtotal">Grand Total</string>
    <string name="proceed">Proceed To Checkout</string>
    <string name="shareproduct">Hey! Check This New App On Play Store.</string>
    <string name="invitefriends">Invite Your Friend</string>
    <string name="hey">Hey! checkout this new product</string>
    <string name="on">on</string>
    <string name="share">Hey! Check This Out...</string>
    <string name="checkout">Checkout</string>
    <string name="search">Search your products</string>
    <string name="donthaveaccount">Don\'t have an account ? SignUp</string>
    <string name="logginfirst">Please Login First.</string>
    <string name="logout">Sign Out</string>
    <string name="successlogout">Successfully Sign Out</string>
    <string name="myprofile">View Your Info</string>
    <string name="update">Update</string>
    <string name="myorders">My Orders</string>
    <string name="noorders">No More Orders Founds</string>
    <string name="ordernoheading">Order No :</string>
    <string name="orderdetails">Order Details</string>
    <string name="placedon">Placed on</string>
    <string name="totalspending">Total amount paid for this order</string>
    <string name="boughtfor">Bought For</string>
    <string name="enteremail">Enter Your Email</string>
    <string name="send">Send</string>
    <string name="myaddress">My Addresses</string>
    <string name="noaddressfound">No More Addresses Found !</string>
    <string name="phone">Phone :</string>
    <string name="delete">Delete</string>
    <string name="editaddress">Edit Address</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip">Zip</string>
    <string name="phonenumber">Phone</string>
    <string name="deleteaddress">Address Successfully Deleted !</string>
    <string name="logintype">Checkout As</string>
    <string name="Proceed_as_Guest">Guest</string>
    <string name="Proceed_as_User">Customer</string>
    <string name="heyuser">hey</string>
    <string name="somethingleftinyourcart">Something left in your cart !</string>
    <string name="action_search">search</string>
    <string name="noresultfound">No Result Found</string>
    <string name="picture_not_taken">Picture Not Taken</string>
    <string name="error_taking_picture">Error while taking image</string>
    <string name="Livepreview">Live Preview Of Your Store</string>
    <string name="fbt">Frequently Bought Together Products</string>
    <string name="similarproducts">Similar Products</string>
    <string name="trendingproducts">Trending Products</string>
    <string name="ymal">You may also like</string>
    <string name="topselling">Top Selling Products</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="thank_you_order_has_been_placed_successfully">Thank you order has been placed successfully.</string>
    <string name="thank_you">Thank You</string>
    <string name="discount_code">Discount Code</string>
    <string name="you_can_apply_discount_code_here">You can apply discount code here.</string>
    <string name="want_to_apply_discount_code">Want to Apply Discount Code?</string>
    <string name="yes_apply_code">Yes, Apply Code</string>
    <string name="no">No</string>
    <string name="gift_card">Gift Card</string>
    <string name="apply">Apply</string>
    <string name="giftcard_validation">Please enter gift card</string>
    <string name="gift_success">Gift card applied successfully</string>
    <string name="gift_remove">Gift card removed successfully</string>
    <string name="discount_validation">Please enter discount code</string>
    <string name="loading">Loading...</string>
    <string name="outofstock_warning">Product is out of stock</string>
    <string name="sign_first">Sign</string>
    <string name="in_last">In</string>
    <string name="rating">Rating</string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="rate_product">+ Write A Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="title">Title</string>
    <string name="author_name">Name</string>
    <string name="please_select_rating">Please select rating</string>
    <string name="name_validation">Please enter name here</string>
    <string name="review_title_validation">Please enter title here</string>
    <string name="review_validation">Please write your review</string>
    <string name="email_validation">Please enter email here</string>
    <string name="review_submitted">Review submitted successfully</string>
    <string name="sorry_this_product_does_not_have_any_reviews">Sorry this product does not have any reviews</string>
    <string name="avaibale_qty">Available Quantity : </string>
    <string name="avaibale_qty_variant">Available Quantity</string>
    <string name="shareheading">SHARE</string>
    <string name="variant_quantity_warning">You have already added the maximum available quantities for this Variant</string>
    <string name="description">Description</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="view_all">View All</string>
    <string name="size_chart">Size Chart</string>
    <string name="ar_error_text">Sorry this device does not support AR feature</string>
    <string name="you_may_also_like">You May Also Like</string>
    <string name="sort">Sort</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="click_here_to_clear_your_cart">Click here to clear your cart</string>
    <string name="warning_message">Warning !</string>
    <string name="delete_cart_warning">Do you want to clear your all items from cart ?</string>
    <string name="delete_single_cart_warning">Do you want to remove this item from cart ?</string>
    <string name="yes_delete">Yes ! Delete</string>
    <string name="deleted">Deleted!</string>
    <string name="cart_deleted_message">Your cart items deleted successfully</string>
    <string name="cart_single_delete_message">Item has been removed successfully</string>
    <string name="done">Done</string>
    <string name="write_a_review">Write A Review</string>
    <string name="reviews">Reviews</string>
    <string name="add_images">Add Images</string>
    <string name="share_this">Share This</string>
    <string name="my_favorite">My Favorite</string>
    <string name="not_intrested_in">Not Intrested In</string>
    <string name="facebook_app_id">291674992513961</string>
    <string name="fb_login_protocol_scheme">fb291674992513961</string>
    <string name="reorder_confirmation">Do you want to reorder this iteam ?</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="reorder_success_msg">Thanks your items has been added in cart.</string>
    <string name="reorder">Reorder</string>
    <string name="order_date">Order date</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="item_details">Item Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="shiping_charges">Shiping Charges</string>
    <string name="net_amount">Net Amount</string>
    <string name="quantity">Quantity :</string>
    <string name="price">Price :</string>
    <string name="order_id">Order #</string>
    <string name="title_activity_maps">Map</string>
    <string name="order_delivery_location">Order will be deliver here</string>
    <string name="subtotal_amt">Subtotal :</string>
    <string name="shipping_amt">Shipping (Standard Shipping) :</string>
    <string name="tax_amt">Tax :</string>
    <string name="payment_status">Payment Status :</string>
    <string name="cancelled_at">Cancelled At</string>
    <string name="cancelled_reason">Cancelled Reason</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="total_order_price">Total Order Price</string>
    <string name="send_emails">Send Emails</string>
    <string name="refer_dailog_title">Just enter their email addresses (separated by a comma) and we will share your link with them</string>
    <string name="tell_your_friends">Tell Your Friends</string>
    <string name="alreadyhaveaccount">We noticed you already have an account with us.Please enter your password below and continue.</string>
</resources>