<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_lightgray"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_icon" />

        <com.shopifydemodemo.app.customviews.MageNativeEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/round_corner_gray"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:edittype="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.shopifydemodemo.app.customviews.MageNativeTextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/enteremail"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:texttype="bold" />

        <com.shopifydemodemo.app.customviews.MageNativeButton
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/send"
            app:buttontype="white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>